fix overlapping info items

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -479,8 +479,8 @@ h3.my-profession
 
 .about .about-content .personal-info .info-item
 {
-    flex: 0 0 100%;
-    max-width: 100%;
+    flex: 0 0 50%;
+    max-width: 50%;
 }
 
 .about .about-content .personal-info .info-item p
@@ -1024,6 +1024,12 @@ h3.my-profession
         left: 270px;
     }
 
+    .about .about-content .personal-info .info-item
+    {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+
     .about .about-content .personal-info .info-item p span
     {
         display: block;
@@ -1050,6 +1056,12 @@ h3.my-profession
     {
         display: none;
     }
+
+    .about .about-content .personal-info .info-item
+    {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
 }
 
 @media (max-width: 767px)
@@ -1062,7 +1074,8 @@ h3.my-profession
     .about .about-content .experience,
     .about .about-content .education,
     .about .about-content .skills,
-    .about .about-content .personal-info
+    .about .about-content .personal-info,
+    .about .about-content .personal-info .info-item
     {
         flex: 0 0 100%;
         max-width: 100%;
